# platxa-command-generator

./: .gitignore  CONTRIBUTING.md  README.md  SKILL.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
assets/command-template/: command.md
commands/: platxa-frontend-component.md  platxa-frontend-form.md  platxa-frontend-page.md  platxa-frontend-route.md
commands/examples/: explain.md  release.md  test-file.md
references/agents/: architecture-agent.md  discovery-agent.md  generation-agent.md  validation-agent.md
references/patterns/: anti-patterns.md  argument-patterns.md  bash-execution-patterns.md  command-types.md  command-vs-skill-vs-hook.md  content-quality-scorer.md  context-handoff.md  continuous-learning.md  domain-discovery.md  error-handling.md  file-reference-patterns.md  frontmatter-generator.md  frontmatter-validator.md  hook-preprocessing.md  naming-conventions.md  phase-transitions.md  quality-gate.md  sequential-composition.md  state-machine.md  subagent-dispatch.md  team-sharing.md  token-budget.md
references/spec/: directory-layout.md
references/templates/: anti-patterns.md  basic-template.md  command-templates.md  interactive-template.md  parameterized-template.md  plugin-template.md  standard-template.md  workflow-template.md
scripts/: check-duplicates.py  count-tokens.py  install-command.sh  security-check.sh  validate-all.sh  validate-frontmatter.sh  validate-structure.sh
tests/: conftest.py  helpers.py  test_check_duplicates.py  test_count_tokens.py  test_integration.py  test_security_check.py  test_validate_frontmatter.py  test_validate_structure.py
