[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "platxa-command-generator"
version = "1.0.0"
description = "Autonomous command creator for Claude Code CLI using multi-phase orchestrated workflows"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "DJ Patel", email = "dj@platxa.com"}
]
maintainers = [
    {name = "DJ Patel", email = "dj@platxa.com"}
]
keywords = [
    "claude",
    "claude-code",
    "command-generator",
    "slash-commands",
    "automation",
    "ai",
    "anthropic"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
tokens = [
    "tiktoken>=0.5.0",
]
dev = [
    "pytest>=7.0",
    "pytest-timeout>=2.0",
    "tiktoken>=0.5.0",
]
all = [
    "platxa-command-generator[tokens,dev]",
]

[project.urls]
Homepage = "https://github.com/platxa/platxa-command-generator"
Documentation = "https://github.com/platxa/platxa-command-generator#readme"
Repository = "https://github.com/platxa/platxa-command-generator.git"
Issues = "https://github.com/platxa/platxa-command-generator/issues"

[project.scripts]
count-tokens = "scripts.count_tokens:main"

[tool.setuptools]
packages = ["scripts"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.md", "*.sh"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers -ra"
markers = [
    "frontmatter: Tests for command frontmatter validation",
    "structure: Tests for command file structure validation",
    "tokens: Tests for token counting utility",
    "integration: Integration tests for full validation workflow",
    "slow: Tests that may take longer to execute",
    "duplicates: Tests for duplicate command detection",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument
]

[tool.ruff.lint.isort]
known-first-party = ["scripts", "tests"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
include = ["scripts", "tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
